# Job-Flow

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scraper/: main.py
scraper/adapters/: base.py  indeed.py
scraper/adapters/indeed/: __init__.py  adapter.py  config.py  discovery.py  pagination.py  scraping.py  selectors.py  utils.py
scraper/adapters/indeed/extraction/: dom.py  json_ld.py  mosaic.py  salary.py
scraper/browser/: __init__.py  browser_factory.py  context.py  context_factory.py  human_input.py  launch.py  manager.py  proxy.py  stealth.py  tabs.py  user_agent.py  utils.py  window.py
scraper/config/: settings.py
scraper/core/: browser.py  models.py  rate_limit.py  runner.py
tests/: manual_browser_test.py  test_dom_extraction.py  test_indeed_extraction.py  test_proxy_config.py  test_proxy_rotation.py
