[project]
name = "job-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "parsel>=1.11.0",
    "pydantic-settings>=2.12.0",
    "pytest-playwright>=0.7.2",
    "scrapfly-sdk>=0.8.24",
]
